fixed toolbar z-index, removed Element.scss as it's not necessary anymore

--- a/frontend/src/toolbar/bar/Toolbar.scss
+++ b/frontend/src/toolbar/bar/Toolbar.scss
@@ -4,7 +4,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 2147483020;
+    z-index: 2147483021;
     color-scheme: light dark;
     user-select: none; // Make the app feel less page-like and more app-like - apps scarcely allow text selection
     opacity: 1;
